--- a/app/index.html
+++ b/app/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html ng-app = 'modulApp'>
 <head lang="en">
   <meta charset="UTF-8">
   <title>Angular with Webpack</title>
   <script src="./main.js"></script>
+  <link rel="stylesheet" href="./bootstrap.min.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
-<body ng-app = 'app'>
-  <div ng-component = 'component'>
-    <div ng-controller = 'controllerG as g'>
-      {{g.test}}
-    </div>
+<body >
+  <div class='container flex'>
+      <list></list>
+      <card></card>
+      <edit></edit>
   </div>
-
 
 </body>
 </html>
