done  with the list making show component

--- a/app/index.html
+++ b/app/index.html
@@ -9,17 +9,10 @@
 </head>
 <body >
   <div class='container flex'>
-      <list >
-      </list>
-      <card></card>
-      <edit></edit>
-      <div ng-controller = "listController as ctr">
-          <div ng-bind = 'ctr.listJSON'></div>
-          <div>
-            {{ ctr.list}}
-          </div>
-      </div>
-  </div>
 
+      <list > </list>
+      <show></show>
+  </div>
+  <!-- <edit></edit> -->
 </body>
 </html>
