done  with the card, working on edit tab

--- a/app/index.html
+++ b/app/index.html
@@ -6,13 +6,14 @@
   <script src="./main.js"></script>
   <link rel="stylesheet" href="./bootstrap.min.css">
   <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./angular-datepicker.css">
 </head>
 <body >
   <div class='container flex'>
 
-      <list > </list>
-      <show></show>
+      <list> </list>
+      <show ></show>
+      <edit></edit>
   </div>
-  <!-- <edit></edit> -->
 </body>
 </html>
