--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html ng-app = 'app'>
 <head lang="en">
   <meta charset="UTF-8">
-  <title>Angular with Webpack</title>
+  <title>Modul Bank task</title>
   <script src="./main.js"></script>
   <link rel="stylesheet" href="./bootstrap.min.css">
   <link rel="stylesheet" href="./style.css">
